feat: bootstrap initial logic